--- a/SeansRPGDice/trunk/SeansRPGDice/SeansRPGDice.csproj
+++ b/SeansRPGDice/trunk/SeansRPGDice/SeansRPGDice.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{7A984321-F2E6-460A-8F83-37246FDC4CB1}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dice.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
